	type if any.  Thanks to fogine.

	Drastically increased performance of custom view composing.

	Be more accurate when deciding whether view displays graphics,
	particularly rely on %px and %py, because %pw and %ph might be useful for
	text viewers as well.  Thanks to Svyatoslav Mishyn (a.k.a. juef).

	Less flicker on preview window update.

	Fixed pane titles update on switching panes.

	Fixed build on OpenBSD.  Patch by Brian Callahan (a.k.a. ibara).

	Fixed redrawing of dialogs requested via startup commands.  Thanks to
	filterfalse.

	Fixed removal of original directories during merging with 'syscalls' on.
	Thanks to willemw12.

	Fixed directory merging when 'syscalls' is off.  Thanks to willemw12.

	Fixed option completion to do not provide completion for "noall" or
	"invall", which isn't valid.

	Fixed dialog message centering which could be off by one.

	Fixed work on OpenBSD (at least to some degree that curses implementation
	there allows).  There are still some troubles with non-ascii characters.
	Thanks to hofheinz.

	Fixed possible constant view reload when built on some systems.  Thanks to
	hofheinz.

	Fixed error reporting on builtin function argument parsing in rhs of :let
	expression.  Thanks to Svyatoslav Mishyn (a.k.a. juef).

0.7.8 to 0.8-beta

	Removed per-view last search pattern.  Don't worry, you probably won't
	even notice it: this doesn't affect regular use case, rather more exotic
	one, which is hard to notice.

	Map <c-h> and <bs> to different key codes.  Thanks to fogine.

	Added <lt> angle bracket notation (less-than character, '<').  Thanks to
	filterfalse.

	Added K mapping to Vim plugin (quick navigation to documentation, e.g.
	from vifmrc).  Patch by filterfalse.

	Aligned columns in :jobs menu.

	Added 'chaselinks' option to automatically expand all symbolic links in
	path of a view (might not work on Windows).  Thanks to filterfalse.

	Added %FOREGROUND FUSE mounting option, which supersedes %CLEAR and