@@ -13,6 +13,8 @@
 
 	Less flicker on preview window update.
 
+	Clean occasional graphics leftovers after disabling preview.
+
 	Fixed pane titles update on switching panes.
 
 	Fixed build on OpenBSD.  Patch by Brian Callahan (a.k.a. ibara).
